--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="static/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon"  /><!-- 必须 -->
-    <title>user-web</title>
+    <title>电影影评网站</title>
   </head>
   <body>
     <div id="app"></div>
